--- a/src/Weather.css
+++ b/src/Weather.css
@@ -74,6 +74,7 @@
   padding: 15px 20px;
   min-width: 120px;
   text-align: center;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
 .Weather .highlights-inner h4 {
