--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -13,6 +13,7 @@
   padding: 5px 10px;
   min-width: 120px;
   text-align: center;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
 }
 
 .Forecast .day-inner h6 {
