--- a/src/Weather.css
+++ b/src/Weather.css
@@ -22,6 +22,8 @@
   background: #ececee;
   border: 1px solid #ececee;
   padding-left: 10px;
+  padding-right: 10px;
+  letter-spacing: 1px;
 }
 
 .Weather .weather-img {
