--- a/src/Weather.css
+++ b/src/Weather.css
@@ -61,7 +61,7 @@
 
 .Weather .highlights {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .Weather .highlights-inner {
@@ -83,11 +83,6 @@
 
 .Weather .highlights-inner:hover h4 {
   opacity: 1;
-}
-
-.Weather .loading {
-  display: flex;
-  justify-content: center;
 }
 
 @media (max-width: 992px) {
