Added forecast for 6 days

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -1,5 +1,6 @@
 .Forecast .day {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -11,6 +12,8 @@
   min-width: 120px;
   text-align: center;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+
+  margin: 0 1vw;
 }
 
 .Forecast .day-inner h6 {
@@ -29,4 +32,10 @@
 .Forecast .day-inner span:hover {
   opacity: 1;
   font-weight: bold;
+}
+
+@media (max-width: 992px) {
+  .Forecast .day-inner {
+    margin: 0;
+  }
 }
